--- a/.buildkite/template.yml
+++ b/.buildkite/template.yml
@@ -1,5 +1,6 @@
 # Used by the 'Add to Buildkite' button in the readme
-name: "Python Docker Example"
+name: "Bash Parallel Example"
+description: "An parallel example repository you can use as a test project with Buildkite"
 steps:
-  - label: ":pipeline:"
-    command: "buildkite-agent pipeline upload"
+  - command: "buildkite-agent pipeline upload"
+    label: ":pipeline:"
